--- a/index.html
+++ b/index.html
@@ -117,13 +117,16 @@
           <ul class="pictures list">
             <li class="pictures-img">
               <img src="./images/pic1.jpg" alt="Результат на мониторе" width="370" height="294" />
+              <p class="pictures-text">Десктопные приложения</p>
             </li>
             <li class="pictures-img">
               <img src="./images/pic2.jpg" alt="Результат на телефоне" width="370" height="294" />
+              <p class="pictures-text">Мобильные приложения</p>
             </li>
 
             <li class="pictures-img">
               <img src="./images/pic3.jpg" alt="Результат на планшете" width="370" height="294" />
+              <p class="pictures-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
