--- a/portfolio.html
+++ b/portfolio.html
@@ -84,16 +84,17 @@
               <ul class="profile list">
             <li class="profile-box">
               <a href="" class="profile-card">
-              <img src="./images/portf1.jpg" alt="techno_crack" width="370" height="294">
-              </img>
-              
-              <div class="title-text">  
-                <h3 class="profile-box-title">
-                    Технокряк
-                  </h3>
-                  <p class="profile-box-text">Веб-сайт</p>
-              </div>
+                <img src="./images/portf1.jpg" alt="techno_crack" width="370" height="294">
+                </img>
+                <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                  <div class="title-text">  
+                    <h3 class="profile-box-title">
+                        Технокряк
+                    </h3>
+                      <p class="profile-box-text">Веб-сайт</p>
+                  </div>
               </a>
+            </li>  
             <li class="profile-box">
               <a href="" class="profile-card">
 
@@ -106,7 +107,7 @@
                 <p class="profile-box-text">Дизайн</p>
                 </div>
               </a>
-            
+            </li>
                 <li class="profile-box">
                   <a href="" class="profile-card">
   
@@ -119,6 +120,7 @@
                     <p class="profile-box-text">Приложение</p>
                   </div>
                   </a>
+                </li>  
             <li class="profile-box">
               <a href="" class="profile-card">
  
@@ -131,7 +133,8 @@
                   <p class="profile-box-text">Маркетинг</p>
               </div>
               </a>
-            <li class="profile-box">
+            </li>
+              <li class="profile-box">
                <a href="" class="profile-card">
 
               <img src="./images/portf5.jpg" alt="boxes" width="370" height="294">
@@ -143,6 +146,7 @@
                 <p class="profile-box-text">Приложение</p>
                 </div>
                 </a>
+                </li>
             <li class="profile-box">
               <a href="" class="profile-card">
 
@@ -155,6 +159,7 @@
                 <p class="profile-box-text">Веб-сайт</p>
                 </div>
                 </a>
+                </li>
             <li class="profile-box">
               <a href="" class="profile-card">
 
@@ -167,6 +172,7 @@
                 <p class="profile-box-text">Дизайн</p>
                 </div>
               </a>
+              </li>
             <li class="profile-box">
               <a href="" class="profile-card">
 
@@ -179,6 +185,7 @@
                 <p class="profile-box-text">Веб-сайт</p>
                 </div>
               </a>
+              </li>
             <li class="profile-box">
                <a href="" class="profile-card">
 
@@ -191,6 +198,7 @@
                 <p class="profile-box-text">Приложение</p>
                 </div>
                </a>
+               </li>
           </ul>
         </div>
       </section>
