--- a/index.html
+++ b/index.html
@@ -57,56 +57,65 @@
       <section class="hero-heading">
         <div class="container">
           <h1 class="heading">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-button">Заказать услугу</button>
+          <button data-modal-open type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
       <section class="section">
         <div class="container">
           <ul class="text list">
-            <li class="text-goals">
+            <li class="goals-card">
               <div class="container-goals">
-                <svg class="icon-goals">
-                  <use href="./images/symbol-defs.svg#icon-antenna" width="70" height="70"></use>
+                <svg class="icon-goals" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
-
-              <h3 class="text-caption">Внимание к деталям</h3>
-              <p class="text-content">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
+              <div class="goals-text">
+                <h3 class="text-caption">Внимание к деталям</h3>
+                <p class="text-content">
+                  Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+              </div>
             </li>
-            <li class="text-goals">
+            <li class="goals-card">
               <div class="container-goals">
-                <svg class="icon-goals">
-                  <use href="./images/symbol-defs.svg#icon-clock" width="70" height="70"></use>
+                <svg class="icon-goals" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="text-caption">Пунктуальность</h3>
-              <p class="text-content">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <div class="goals-text">
+                <h3 class="text-caption">Пунктуальность</h3>
+                <p class="text-content">
+                  Задача организации, в особенности же рамки и место обучения кадров влечет за
+                  собой.
+                </p>
+              </div>
             </li>
-            <li class="text-goals">
+            <li class="goals-card">
               <div class="container-goals">
-                <svg class="icon-goals">
-                  <use href="./images/symbol-defs.svg#icon-diagram" width="70" height="70"></use>
+                <svg class="icon-goals" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="text-caption">Планирование</h3>
-              <p class="text-content">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <div class="goals-text">
+                <h3 class="text-caption">Планирование</h3>
+                <p class="text-content">
+                  Равным образом консультация с широким активом в значительной степени
+                  обуславливает.
+                </p>
+              </div>
             </li>
-            <li class="text-goals">
+            <li class="goals-card">
               <div class="container-goals">
-                <svg class="icon-goals">
-                  <use href="./images/symbol-defs.svg#icon-astronaut" width="70" height="70"></use>
+                <svg class="icon-goals" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="text-caption">Современные технологии</h3>
-              <p class="text-content">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-              </p>
+              <div class="goals-text">
+                <h3 class="text-caption">Современные технологии</h3>
+                <p class="text-content">
+                  Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -288,63 +297,63 @@
         </div>
       </section>
       <section class="clients">
-        <div class="container clients">
+        <div class="container clients-text">
           <h2 class="client-heading">Постоянные клиенты</h2>
 
           <ul class="client-list list">
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo1"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo2"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo3"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo4"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo5"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
             <li class="clients-list">
-              <button class="client-button">
-                <a href="" class="clients-a">
-                  <svg class="clients-net" alt="JA&co" width="41" height="47">
+              <a href="" class="clients-a">
+                <button class="client-button">
+                  <svg class="clients-net" alt="JA&co">
                     <use href="./images/symbol-defs.svg#icon-Logo6"></use>
                   </svg>
-                </a>
-              </button>
+                </button>
+              </a>
             </li>
           </ul>
         </div>
@@ -408,6 +417,16 @@
           </div>
         </div>
       </footer>
+      <div data-modal class="backdrop is-hidden">
+        <div class="modal">
+          <button data-modal-close type="button" class="modal-close-bt">
+            <svg class="" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </main>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
