--- a/portfolio.html
+++ b/portfolio.html
@@ -87,11 +87,12 @@
               
               <a href="" class="profile-card">
                 <div class="card-fone"> 
-                <img src="./images/portf1.jpg" alt="techno_crack" width="370" height="294">
-                </img>
-                <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
-             
-              </div>
+                  <img src="./images/portf1.jpg" alt="techno_crack" width="370" height="294">
+                  </img>
+                    <div class="card-overlay">
+                       <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                    </div>
+                </div>
                   <div class="title-text">  
                     <h3 class="profile-box-title">
                         Технокряк
