--- a/portfolio.html
+++ b/portfolio.html
@@ -103,9 +103,17 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
+              <div class="card-fone">
+                <img src="./images/portf2.jpg" alt="poster" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
 
-              <img src="./images/portf2.jpg" alt="poster" width="370" height="294">
-              </img>
+              </div>
+
               <div class="title-text">
                 <h3 class="profile-box-title" lang="en">
                   Постер New Orlean vs Golden Star
@@ -116,9 +124,16 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
+              <div class="card-fone">
+                <img src="./images/portf3.jpg" alt="restaurant lable" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
 
-              <img src="./images/portf3.jpg" alt="restaurant lable" width="370" height="294">
-              </img>
               <div class="title-text">
                 <h3 class="profile-box-title">
                   Ресторан Seafood
@@ -129,9 +144,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf4.jpg" alt="headphone" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf4.jpg" alt="headphone" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title">
                   Проект Prime
@@ -142,9 +163,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf5.jpg" alt="boxes" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf5.jpg" alt="boxes" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title">
                   Проект Boxes
@@ -155,9 +182,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf6.jpg" alt="techno_crack" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf6.jpg" alt="techno_crack" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title" lang="en">
                   Inspiration has no Borders
@@ -168,9 +201,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf7.jpg" alt="magazine" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf7.jpg" alt="magazine" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title" lang="en">
                   Издание Limited Edition
@@ -181,9 +220,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf8.jpg" alt="label" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf8.jpg" alt="label" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title">
                   Проект LAB
@@ -194,9 +239,15 @@
           </li>
           <li class="profile-box">
             <a href="" class="profile-card">
-
-              <img src="./images/portf9.jpg" alt="laptop" width="370" height="294">
-              </img>
+              <div class="card-fone">
+                <img src="./images/portf9.jpg" alt="laptop" width="370" height="294">
+                </img>
+                <div class="card-overlay">
+                  <p class="profile-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="title-text">
                 <h3 class="profile-box-title" lang="en">
                   Growing Business
